test/parser.d/invalid/typedef-struct-1.surc.bad
def struct TupleIntBool = { tuple_int_bool(i)(b) }
